fixed a typo in html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <body>
     <button onclick="" class="container">
       <h1>apri la console!</h1>
-      <p>(ctrl + i) <i class="fas fa-hand-point-right"></i></p>
+      <p>(ctrl + shift + i) <i class="fas fa-hand-point-right"></i></p>
       <script src="./script/D3.js"></script>
     </button>
   </body>
